objects/Twillio_API_Details__mdt.object
<CustomObject>
    <fields>
        <fullName>Production_Authorization_Endpoint__c</fullName>
        <label>Production Authorization Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Client_Id__c</fullName>
        <label>Production Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Client_Secret__c</fullName>
        <label>Production Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_SMS_Endpoint__c</fullName>
        <label>Production SMS Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Authorization_Endpoint__c</fullName>
        <label>Test Authorization Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Client_Id__c</fullName>
        <label>Test Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Client_Secret__c</fullName>
        <label>Test Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_SMS_Endpoint__c</fullName>
        <label>Test SMS Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Twillio API Details</label>
    <pluralLabel>Twillio API Details</pluralLabel>
</CustomObject>